--- a/telas_finais/css/home.css
+++ b/telas_finais/css/home.css
@@ -21,7 +21,8 @@ body{
 
 img.img_carrossel{
     height: 100% !important;
-    max-height:600px !important; 
+    max-height:600px !important;
+    min-height: 600px; 
     object-fit: cover !important;
 }
 
