--- a/telas_finais/css/contato.css
+++ b/telas_finais/css/contato.css
@@ -15,10 +15,11 @@
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
+    margin-top: 20px;
 }
 
 body {
-    background-color: #8DA5ED !important;
+    background-color: #FFBD57 !important;
 }
 
 /* background-image: url("../Image/2.png" )!important; */
@@ -37,7 +38,8 @@ form input, form select, form button {
 
 
 #enviar {
-    background-color: #007bff;
+    margin-top: 35px;
+    background-color: #0cb725;
     color: white;
     border: none;
     cursor: pointer;
@@ -50,10 +52,12 @@ form input, form select, form button {
 .insta {
     background: radial-gradient(circle at 30% 140%, #fdf497 0%, #fdf497 5%,
             #fd5949 45%, #d6249f 60%, #285AEB 90%);
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, .25);
     display: flex;
     align-items: center;
 
+}
+.row{
+    margin-top: 30px;
 }
 
 @media (min-width: 576px) {
@@ -91,6 +95,6 @@ form input, form select, form button {
 @media (min-width: 1400px) {
     .container-fluid.formulario {
         width: 40%;
-        padding:3%;
+        padding: 3%;
     }
 }
