--- a/telas_finais/css/saude.css
+++ b/telas_finais/css/saude.css
@@ -47,6 +47,9 @@ p{
 .container_descricao{
     background-color: #3E4096;
 }
+.row_descricao{
+    padding: 40px 0 !important;
+}
 body{
     background-color: #FFBD57  !important;
 }
@@ -68,7 +71,7 @@ body{
     z-index: 10;
     overflow: visible;
     position: absolute;
-    top: 400px;
+    top: 450px;
     right: 700px;
 
 }
@@ -80,7 +83,7 @@ body{
     overflow: visible;
     position: absolute;
     top: 610px;
-    right: 1000px;
+    right: 50%;
 
 }
 
@@ -114,7 +117,7 @@ body{
     overflow: visible;
     position: absolute;
     top: 1500px;
-    right: 1000px;
+    right: 50%;
 
 }
 
