--- a/telas_finais/css/contato.css
+++ b/telas_finais/css/contato.css
@@ -98,3 +98,13 @@ form input, form select, form button {
         padding: 3%;
     }
 }
+
+
+
+.img_ctt{
+    max-width: 100% !important; 
+    max-height: 400px !important; 
+    min-height: 400px !important;
+    height: auto !important; 
+    object-fit: cover !important;
+}
