--- a/telas_finais/css/saude.css
+++ b/telas_finais/css/saude.css
@@ -55,7 +55,7 @@ body{
     background-color: #FFBD57  !important;
 }
 
-#imagem0 {
+#brilho0 {
     width: 150px;
     height: auto;
     z-index: 10;
@@ -66,7 +66,7 @@ body{
 
 }
 
-#imagem1 {
+#brilho1 {
     width: 150px;
     height: auto;
     z-index: 10;
@@ -77,7 +77,7 @@ body{
 
 }
 
-#imagem2 {
+#brilho2 {
     width: 100px;
     height: auto;
     z-index: 10;
@@ -88,7 +88,7 @@ body{
 
 }
 
-#imagem3 {
+#brilho3{
     width: 150px;
     height: auto;
     z-index: 10;
@@ -99,7 +99,7 @@ body{
 
 }
 
-#imagem4 {
+#brilho4 {
     width: 110px;
     height: auto;
     z-index: 10;
@@ -111,7 +111,7 @@ body{
 }
 
 
-#imagem5 {
+#brilho5 {
     width: 100px;
     height: auto;
     z-index: 10;
@@ -122,7 +122,7 @@ body{
 
 }
 
-#imagem6 {
+#brilho6 {
     width: 80px;
     height: auto;
     z-index: 10;
@@ -134,7 +134,7 @@ body{
 
 }
 
-#imagem7 {
+#brilho7 {
     width: 80px;
     height: auto;
     z-index: 10;
@@ -145,7 +145,7 @@ body{
 
 }
 
-#imagem8 {
+#brilho8 {
     width: 90px;
     height: auto;
     z-index: 10;
@@ -157,7 +157,7 @@ body{
 
 
 @media (max-width: 1480px) {
-    #imagem0, #imagem1, #imagem2, #imagem3, #imagem4, #imagem5,#imagem6, #imagem7, #imagem8 {
+    #brilho0, #brilho1, #brilho2, #brilho3, #brilho4, #brilho5,#brilho6, #brilho7, #brilho8 {
       display: none;
     }
   }
