--- a/telas_finais/css/oficinas.css
+++ b/telas_finais/css/oficinas.css
@@ -21,17 +21,7 @@ body{
   letter-spacing: 1px;
   }
 
-  .img_descricao{
-    max-width: 100% !important; 
-    max-height: 100% !important; 
-    height: auto !important; 
-    width: 100px !important;
-  }
-  .col_imagem_descricao{
-    object-fit: cover !important;
-    padding: 0 !important;
-  }
-  
+
 a.botao_oficinas{
     margin: 40px !important;
     padding: 15px !important;
@@ -52,126 +42,105 @@ a.botao_oficinas:hover{
 }
 
 
-  .slide-container{
-    max-width: 95%;
-    width: 100%;
-    padding: 40px 0;
-  }
-  .slide-content{
-    margin: 0 40px;
-    overflow: hidden;
-  }
-  .card{
-    border-radius: 25px;
-    background-color: #FFF;
-    border-radius: 20px !important;
-    height: 100% !important;
-  }
- 
-  
-  .card-content{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 14px;
-    margin: 20px !important;
-    height: 350px !important;
-    object-fit: cover !important;
-    max-height: 100% !important;
-  }
-  .image-content{
-    position: relative;
-    row-gap: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .card-img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 20px 20px 0 0!important;
-  }
-  
-  .card-image {
-    height: 300px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  
-
-  .name{
-    font-size: 25px !important;
-    margin-bottom: 20px !important;
-    margin-top: 8px !important;
-    font-weight: 500;
-    color: black !important;
-    text-align: center !important;
-    font-family:"Luckiest Guy", sans-serif !important;
-
-  }
-  .description{
-    font-size: 18px !important;
-    color: black !important;
-    text-align: center !important;
-    font-family: 'Ubuntu', sans-serif !important;
-
-  }
-  .button{
-    border: none;
-    font-size: 16px;
-    color: #FFF;
-    padding: 8px 16px;
-    background-color: #4070F4;
-    border-radius: 6px;
-    margin: 14px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .button:hover{
-    background: #265DF2;
-  }
-  
-  .swiper-navBtn{
-    color: white!important;
-    transition: color 0.3s ease;
-    background-color: black;
-
-  }
-  /* .swiper-navBtn:hover{
-    color: #4070F4 !important;
-  } */
-  .swiper-navBtn::before,
-  .swiper-navBtn::after{
-    font-size: 35px !important;
-  }
-  .swiper-button-next{
-    right: 0 !important ;
-  }
-  .swiper-button-prev{
-    left: 0 !important;
-  }
-  /* .swiper-pagination-bullet{
-    background-color: #6E93f7;
-    opacity: 1;
-  }
-  .swiper-pagination-bullet-active{
-    background-color: #4070F4;
-  }
-   */
-  @media screen and (max-width: 768px) {
-    .slide-content{
-      margin: 0 10px;
+.card {
+    margin: 0 0.5em!important;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18)!important;
+    border: none!important;
+    background-color: white!important;
+    text-align: center!important;
+    border-radius: 20px!important;
     }
-    .swiper-navBtn{
-      display: none;
+  
+    .card-title{
+        font-family:"Luckiest Guy", sans-serif!important;
+        font-size: 2rem!important;
+        color: black!important;
+        margin: 25px 0!important;
+  
     }
-
-  }
+    .card-text{
+        font-family: 'Ubuntu', sans-serif !important;
+        font-size: 1.2rem!important;
+        color: black!important;
+        margin: 20px!important;
+  
+    }
+  
+      .carousel-control-prev,
+      .carousel-control-next {
+      background-color: #3E4096!important;
+      width: 6vh!important;
+      height: 6vh!important;
+      border-radius: 30px!important;
+      top: 50%!important;
+      transform: translateY(-50%)!important;
+      }
+  
+  
+    /* .carousel-item{
+  
+        width: 100% !important;
+    } */
+  
+    @media (min-width: 992px) {
+    .carousel-item {
+        margin-right: 0!important;
+        flex: 0 0 33.333333%!important;
+        display: block!important;
+    }
+    .carousel-inner {
+        display: flex!important;
+    }
+    }
+  
+    /* .card .img-wrapper {
+        max-width: 100%!important;
+        height: 20em!important;
+        display: flex!important;
+        justify-content: center!important;
+        align-items: center !important;
+    } */
+    /* .img-wrapper img{
+        max-width: 100% !important; 
+        max-height: 100% !important; 
+        height: auto !important; 
+        width: auto !important;       
+    } */
+     
+  
+    /* @media (max-width: 767px) {
+    .card .img-wrapper {
+        height: 17em !important;
+    }
+    } */
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+    /* ysejfhjksadhf */
+  
+  
+    .card-body{
+      padding: 0 !important;
+    }
+  
+    .img_card{
+      max-width: 100% !important; 
+      max-height: 400px !important; 
+      min-height: 400px !important;
+      height: auto !important; 
+      width: 100px !important;
+      object-fit: cover !important;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+    }
   
 
   
