--- a/telas_finais/css/pop-up.css
+++ b/telas_finais/css/pop-up.css
@@ -3,8 +3,8 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #3E4096;
-    color: #fff;
+    background-color: white;
+    color: #000000;
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -17,7 +17,7 @@
     flex: 1;
 }
 .cookie-popup button {
-    background-color: #6787E7;
+    background-color: #3E4096;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -27,5 +27,5 @@
     font-size: 16px;
 }
 .cookie-popup button:hover {
-    background-color: #0056b3;
+    background-color: #2d2e85;
 }
